--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,27 @@
 cmake_minimum_required(VERSION 3.14)
 project(sample_cpp_project)
 
-add_executable(main main.cpp my_add.cpp)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+include_directories(include)
+
+add_executable(main main.cpp src/my_add.cpp)
+
+include(FetchContent)
+FetchContent_Declare(
+    googletest
+    GIT_REPOSITORY https://github.com/google/googletest.git
+    GIT_TAG v1.15.2
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+add_executable(tests test_add.cpp src/my_add.cpp)
+target_link_libraries(tests gtest_main)
+
+include(GoogleTest)
+gtest_discover_tests(tests)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
